[package]
name = "kvs-playground"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
ushell = "0.3.1"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
stm32g0xx-hal = { version = "0.1.0", features = ["rt", "stm32g031"] }
btoi = { version = "0.4.2", default-features = false }
kvs = { git = "https://github.com/dotcypress/kvs", branch = "main" }

[profile.dev]
incremental = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true

[features]
default = ["defmt-trace"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
